<resources>
    <string name="app_name">HW_12.5</string>
    <string name="btn_share">Поделиться</string>
    <string name="btn_send">Отправить по почте</string>
    <string name="btn_call">Позвонить</string>
    <string name="btn_camera">Запустить камеру</string>
    <string name="tv_contacts">Azat Serzhanov\nazatserzhan@gmail.com</string>
    <string name="tv_personal_page">Личная страница</string>
    <string name="ic_profile">ic_profile</string>
</resources>