<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_personal_page"
            style="@style/tv_personal_page_style"
            android:text="@string/tv_personal_page" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_vector_ellipsis"
            android:backgroundTint="#FFFFFF"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/ic_profile"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toTopOf="@+id/tv_contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_contacts"
            style="@style/tv_contacts_style"
            android:text="@string/tv_contacts"
            app:layout_constraintBottom_toTopOf="@+id/btn_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_share"
            style="@style/btn_style"
            android:text="@string/btn_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_send"
            style="@style/btn_style"
            android:text="@string/btn_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_share" />

        <Button
            android:id="@+id/btn_call"
            style="@style/btn_style"
            android:text="@string/btn_call"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_send" />

        <Button
            android:id="@+id/btn_camera"
            style="@style/btn_style"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_call" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>
